[package]
name = "resolvconffs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.9.0", default-features = false }
fuser = "0.10.0"
gumdrop = "0.8.0"
libc = "0.2.116"
nix = "0.23.1"
