[package]
name = "resolvconffs"
version = "0.1.0"
edition = "2021"
categories = ["filesystem", "network-programming"]
keywords = ["fuse","resolvconf","dns","network","filesystem"]
license = "MIT/Apache-2.0"
description = "Special single-file FUSE filesystem that maps the file depending on requestor's process's Linux network namespace"
include = ["src","Cargo.toml","LICENSE","README.md"]
repository = "https://github.com/vi/resolvconffs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.9.0", default-features = false }
fuser = "0.10.0"
gumdrop = "0.8.0"
libc = "0.2.116"
nix = "0.23.1"
trait-set = "0.2.0"
log = { version = "0.4", features=[]}

[profile.release]
opt-level = "s"
debug = 1
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
panic = 'abort'

[features]
default=["logging"]
mini = ["log/release_max_level_off"]
logging = []
